--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,22 @@
+alembic==0.9.2
 autopep8==1.3.2
-cffi==1.10.0
 click==6.7
-cryptography==1.7.2
 flake8==3.3.0
 Flask==0.12.2
-Flask-JWT==0.3.2
+Flask-Migrate==2.0.4
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
-Flask-Uploads==0.2.1
-idna==2.5
 itsdangerous==0.24
 Jinja2==2.9.6
+Mako==1.0.6
 MarkupSafe==1.0
 mccabe==0.6.1
-olefile==0.44
-PIL==1.1.7
-Pillow==4.1.1
-pillowcase==2.0.0
-pyasn1==0.2.3
 pycodestyle==2.3.1
-pycparser==2.17
 pyflakes==1.5.0
-PyJWT==1.4.2
+PyJWT==1.5.0
 PyMySQL==0.7.11
+python-dateutil==2.6.0
+python-editor==1.0.3
 six==1.10.0
 SQLAlchemy==1.1.11
 Werkzeug==0.12.2
