--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ flake8==3.3.0
 Flask==0.12.2
 Flask-JWT==0.3.2
 Flask-Migrate==2.0.4
+Flask-Redis==0.3.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-Uploads==0.2.1
@@ -32,6 +33,7 @@ PyMySQL==0.7.11
 python-dateutil==2.6.0
 python-editor==1.0.3
 PyYAML==3.12
+redis==2.10.5
 requests==2.18.1
 shellescape==3.4.1
 six==1.10.0
